# cp-sat-scheduling-engine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  start.ps1  start.sh  test_workflow.py  tournament_scheduler.db  wireframe.jsx
.claude/: settings.local.json
backend/: .gitignore  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/api/: __init__.py  match_state.py  matches.py  roster.py  schedule.py  tournaments.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/draws/: __init__.py  models.py  schemas.py
backend/scripts/: seed_demo_tournament.py
examples/: badminton_event_setup.py  basic_schedule_core.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/adapters/fastapi/: __init__.py  main.py  routes.py  validation.py
src/app/: __init__.py  main.py  schemas.py  solver.py
src/scheduler_core/: __init__.py  _log.py  api_compat.py  schedule.py
src/scheduler_core/competition/: __init__.py  advancement.py  generation.py  graph.py
src/scheduler_core/domain/: __init__.py  errors.py  models.py  tournament.py
src/scheduler_core/engine/: __init__.py  backends.py  bridge.py  cpsat_backend.py  diagnostics.py  extraction.py  live_ops.py  variables.py
src/scheduler_core/plugins/: __init__.py  base.py  builtins.py
src/tests/: __init__.py  test_api.py  test_core_smoke.py  test_scheduler_core.py  test_tournament_formats.py
(+158 files in other folders)
